--- a/pom.xml
+++ b/pom.xml
@@ -461,12 +461,12 @@
             <dependency>
                 <groupId>com.dangdang</groupId>
                 <artifactId>sharding-jdbc-core</artifactId>
-                <version>1.4.2-SNAPSHOT</version>
+                <version>1.5.1</version>
             </dependency>
             <dependency>
                 <groupId>com.dangdang</groupId>
                 <artifactId>sharding-jdbc-config-spring</artifactId>
-                <version>1.4.2-SNAPSHOT</version>
+                <version>1.5.1</version>
             </dependency>
 
             <!---->
