--- a/j360-dubbo-web/src/main/webapp/WEB-INF/web.xml
+++ b/j360-dubbo-web/src/main/webapp/WEB-INF/web.xml
@@ -68,7 +68,7 @@
 		<filter-class>org.springframework.web.filter.HttpPutFormContentFilter</filter-class>
 	</filter>
 	<!-- shiro 安全过滤器-->
-	<filter>
+	<!--<filter>
 		<filter-name>shiroFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 		<async-supported>true</async-supported>
@@ -76,7 +76,7 @@
 			<param-name>targetFilterLifecycle</param-name>
 			<param-value>true</param-value>
 		</init-param>
-	</filter>
+	</filter>-->
 	<!--使用spring拦截器时,注销此处filter拦截,两者只能使用其一-->
 	<filter>
 		<filter-name>braveFilter</filter-name>
@@ -107,11 +107,11 @@
 		<url-pattern>/api/*</url-pattern>
 	</filter-mapping>
 
-	<filter-mapping>
+	<!--<filter-mapping>
 		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 		<dispatcher>REQUEST</dispatcher>
-	</filter-mapping>
+	</filter-mapping>-->
 
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
