--- a/j360-dubbo-autotest/pom.xml
+++ b/j360-dubbo-autotest/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>j360-dubbo</artifactId>
         <groupId>me.j360.dubbo</groupId>
-        <version>1.0-RELEASE</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-api</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
