--- a/j360-dubbo-biz/pom.xml
+++ b/j360-dubbo-biz/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>j360-dubbo</artifactId>
         <groupId>me.j360.dubbo</groupId>
-        <version>1.0-RELEASE</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,28 +15,28 @@
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-base</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-api</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-modules</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-dao</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-sjdbc</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-trace</artifactId>
-            <version>1.0-RELEASE</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
 
         <!-- test-lib -->
