--- a/j360-dubbo-modules/pom.xml
+++ b/j360-dubbo-modules/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>j360-dubbo</artifactId>
         <groupId>me.j360.dubbo</groupId>
-        <version>1.0-RELEASE</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
