--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>me.j360.dubbo</groupId>
     <artifactId>j360-dubbo</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-RELEASE</version>
+    <version>1.1-SNAPSHOT</version>
     <modules>
         <module>j360-dubbo-api</module>
         <module>j360-dubbo-biz</module>
