--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>me.j360.dubbo</groupId>
     <artifactId>j360-dubbo</artifactId>
     <packaging>pom</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-RELEASE</version>
     <modules>
         <module>j360-dubbo-api</module>
         <module>j360-dubbo-biz</module>
@@ -28,7 +28,7 @@
         <connection>scm:git:https://github.com/xuminwlt/j360-dubbo-app-all.git</connection>
         <url>https://github.com/xuminwlt/j360-dubbo-app-all</url>
         <developerConnection>scm:git:https://github.com/xuminwlt/j360-dubbo-app-all.git</developerConnection>
-        <tag>1.0</tag>
+        <tag>1.1</tag>
     </scm>
 
     <properties>
