--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>j360-dubbo-sjdbc2</module>
         <module>j360-dubbo-rocketmq</module>
         <module>j360-dubbo-apollo</module>
+        <module>j360-dubbo-servlet3-spring</module>
     </modules>
 
     <scm>
