--- a/j360-dubbo-apollo/pom.xml
+++ b/j360-dubbo-apollo/pom.xml
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>com.ctrip.framework.apollo</groupId>
             <artifactId>apollo-client</artifactId>
-            <version>0.11.0-SNAPSHOT</version>
+            <version>0.11.0.1</version>
         </dependency>
 
         <dependency>
