--- a/j360-dubbo-trace/pom.xml
+++ b/j360-dubbo-trace/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>j360-dubbo</artifactId>
         <groupId>me.j360.dubbo</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
