--- a/j360-dubbo-web/pom.xml
+++ b/j360-dubbo-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>j360-dubbo</artifactId>
         <groupId>me.j360.dubbo</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
@@ -16,22 +16,22 @@
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-api</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-modules</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-base</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-trace</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
