--- a/j360-dubbo-apollo/pom.xml
+++ b/j360-dubbo-apollo/pom.xml
@@ -14,8 +14,9 @@
             <groupId>com.ctrip.framework.apollo</groupId>
             <artifactId>apollo-client</artifactId>
             <version>0.11.0.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/apollo-client-0.11.0.1.jar</systemPath>
         </dependency>
-
         <dependency>
             <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-base</artifactId>
@@ -133,17 +134,6 @@
             <artifactId>logback-ext-spring</artifactId>
             <version>0.1.2</version>
         </dependency>
-
-        <!-- test-lib -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
+
 </project>
